--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <title>Flex Project</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
 
     <body>
@@ -14,12 +12,12 @@
 
             <div class="header">
 
-                <div style="color: #F9FAF8;"> Head Logo</div>
+                <div style="color: #F9FAF8;"> <a href="_blank">Head Logo</a></div>
 
                 <ul>
-                    <li><a>header link one</a></li>
-                    <li><a>header link two</a></li>
-                    <li><a>header link three</a></li>
+                    <li><a href="_blank">header link one</a></li>
+                    <li><a href="_blank">header link two</a></li>
+                    <li><a href="_blank">header link three</a></li>
                 </ul>
             </div>
 
