--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             <div class="header">
 
-                <div style="color: #F9FAF8;"> <a href="_blank">Head Logo</a></div>
+                <div style="color: #F9FAF8;  font-size: 24px;"> <a href="_blank">Header Logo</a></div>
 
                 <ul>
                     <li><a href="_blank">header link one</a></li>
@@ -23,8 +23,8 @@
 
             <div class="hero">
                 <div class="hero-text">
-                    <div style="font-size: 48px; font-weight: bolder;">This website is awesome</div>
-                    <div style="font-size: 18px; color: #E5E7EB;">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    <div class="hero-main">This website is awesome</div>
+                    <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                     <button style="border: none;">Sign Up</button>
                 </div>
 
@@ -32,13 +32,54 @@
             </div>
         </div>
 
-        <div class="carousel"></div>
+        <div class="carousel-section">
+            <span>Some random information</span>
 
-        <div class="quote-section"></div>
+            <div class="carousel">
 
-        <div class="cta-section"></div>
+                <div class="card">
+                    <div class="box"></div>
+                    <div class="text">this is some subtext under a illustration or image</div>
+                </div>
 
-        <div class="footer"></div>
+                <div class="card">
+                    <div class="box"></div>
+                    <div class="text">this is some subtext under a illustration or image</div>
+                </div>
+
+                <div class="card">
+                    <div class="box"></div>
+                    <div class="text">this is some subtext under a illustration or image</div>
+                </div>
+
+                <div class="card">
+                    <div class="box"></div>
+                    <div class="text">this is some subtext under a illustration or image</div>
+                </div>
+                  
+            </div>
+        </div>
+
+        <div class="quote-section">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</div>
+            <div class="quoter">-Thor, God of Thunder</div>
+        </div>
+
+        <div class="cta-section">
+
+            <div class="box">
+
+                <div class="text">
+                    <span class="header-text">Call to action! It's time!</span>
+                    <span class="sub-text">Sign up for our product by clicking that button right over there!</span>
+                </div>
+                <button>Sign Up</button>
+            </div>
+        </div>
+
+        <div class="footer">
+            Copyright &#169 The Odin Project 2024
+        </div>
 
     </body>
 </html>
