--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="hero-text">
                     <div class="hero-main">This website is awesome</div>
                     <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                    <button style="border: none;">Sign Up</button>
+                    <button style="border: none;"><a href="_blank">Sign Up</a></button>
                 </div>
 
                 <img src="./logo.png" alt="this is a placeholder for an image">
@@ -73,7 +73,7 @@
                     <span class="header-text">Call to action! It's time!</span>
                     <span class="sub-text">Sign up for our product by clicking that button right over there!</span>
                 </div>
-                <button>Sign Up</button>
+                <button><a href="_blank">Sign Up</a></button>
             </div>
         </div>
 
